--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^20.1.5",
     "@types/react": "^18.2.6",
     "@types/react-dom": "^18.2.4",
+    "firebase-tools": "^12.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-draggable": "^4.4.5",
